--- a/usuarios/templates/usuarios/perfilusuario.html
+++ b/usuarios/templates/usuarios/perfilusuario.html
@@ -3,32 +3,42 @@
 {% block content %}
 
 <div class="container py-4 ">
-  <h2><strong>{{usuario}}</strong></h2>
-  <p class="fst-italic text-muted">{{usuario.get_last_sesion_date}}.</p>
-      <hr class="featurette-divider">
-      <h3><strong>Estadísticas generales</strong></h3>
-        <div class="container-fluid pt-5">
-          <div class="row">
-            <div class="col-6">
-              <div id="pie_graph" data-url="{% url 'get_pie_graph' id_usuario=usuario.id_usuario %}"></div>
-            </div>
-            <div class="col-6">
-              <div id="user_results_time_graph" data-url="{% url 'get_user_results_time_graph' id_usuario=usuario.id_usuario %}"></div>
-            </div>
-          </div>
+  <div class="row">
+    <div class="col-10 d-flex flex-column justify-content-center">
+      <h1><strong>{{usuario}}</strong></h1>
+      <p class="fst-italic text-muted">{{usuario.get_last_sesion_date}}.</p>
+    </div>
+    <div class="col-2 d-flex flex-column justify-content-center">
+      <img src="{{usuario.foto.url}}" class="img-fluid rounded-circle" width="150" height="160"/>
+    </div>
+  </div>
+
+
+
+  <hr class="featurette-divider">
+  <h3><strong>Estadísticas generales</strong></h3>
+    <div class="container-fluid pt-5">
+      <div class="row">
+        <div class="col-6">
+          <div id="pie_graph" data-url="{% url 'get_pie_graph' id_usuario=usuario.id_usuario %}"></div>
         </div>
-        <hr class="featurette-divider">
-        <h3><strong>Estadísticas específicas</strong></h3>
-        <div class="container-fluid pt-5">
-          <div class="row">
-            <div class="col-6">
-              <div id="game_time_graph" data-url="{% url 'get_game_time_graph' id_usuario=usuario.id_usuario %}"></div>
-            </div>
-            <div class="col-6">
-              <div id="col_graph" data-url="{% url 'get_col_graph' id_usuario=usuario.id_usuario %}"></div>
-            </div>
-          </div>
+        <div class="col-6">
+          <div id="user_results_time_graph" data-url="{% url 'get_user_results_time_graph' id_usuario=usuario.id_usuario %}"></div>
         </div>
+      </div>
+    </div>
+    <hr class="featurette-divider">
+    <h3><strong>Estadísticas específicas</strong></h3>
+    <div class="container-fluid pt-5">
+      <div class="row">
+        <div class="col-6">
+          <div id="game_time_graph" data-url="{% url 'get_game_time_graph' id_usuario=usuario.id_usuario %}"></div>
+        </div>
+        <div class="col-6">
+          <div id="col_graph" data-url="{% url 'get_col_graph' id_usuario=usuario.id_usuario %}"></div>
+        </div>
+      </div>
+    </div>
 
    <hr class="featurette-divider">
 
